--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap');
+
+/* body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Manrope', sans-serif;
+} */
+
 .main {
   display: flex;
+  font-family: 'Manrope', sans-serif;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -7,272 +16,355 @@
   min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+.root {
+  display: flex;
+  place-content: center flex-start;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  flex-flow: column nowrap;
+  gap: 10px;
+  height: 100vh;
+  overflow: auto;
+  padding: 0px;
+  position: relative;
+}
+
+.container {
+  display: flex;
+  place-content: center flex-start;
+  align-items: center;
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 10px;
+  height: fit-content;
+  max-width: 975px;
+  overflow: auto;
+  padding: 50px;
+  position: relative;
+  width: auto;
+  gap: 64px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  color: #FFF
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.headerTitle {
+  display: flex;
+  gap: 12px;
 }
 
-.code {
+.headerTitle h1 {
+  width: 100%;
   font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
+  font-size: 72px;
+  letter-spacing: -4px;
+  line-height: 1.2em;
+  text-align: center;
   margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
 }
 
-.center {
-  display: flex;
-  justify-content: center;
+.headerSubtitle h2 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.4em;
+  color: rgb(0, 0, 0);
+}
+
+.promptContainer {
+  place-content: flex-end center;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo,
-.thirteen {
-  position: relative;
-}
-
-.thirteen {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 16px;
+  height: min-content;
+  padding: 0px;
+  width: min-content;
+}
+
+.promptBox {
+  font-family: 'Manrope', sans-serif;
+  border-bottom-width: 1px;
+  border-color: rgba(255, 255, 255, 0.1);
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-style: solid;
+  border-top-width: 1px;
+  place-content: flex-start;
+  align-items: flex-start;
+  background-color: rgba(255, 255, 255, 0.05);
+  border-radius: 16px;
+  display: flex;
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 10px;
+  /* height: 150px; */
   overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
+  padding: 20px;
+  position: relative;
+  width: 610px;
+  max-width: 1200px;
+  will-change: transform;
+  overflow: auto;
+  outline: none;
+  resize: none;
+  font-size: 16px;
+  font-style: normal;
+  letter-spacing: 0px;
+  line-height: 1.6em;
+  text-align: start;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  text-transform: none;
 }
 
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
+
+.promptBox:focus {
+  border-color: rgba(255, 255, 255, 0.75)
 }
 
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
+
+.promptButtons {
+  display: flex;
+  place-content: center;
+  align-items: center;
+  justify-content: flex-end;
+  flex: 0 0 auto;
+  flex-flow: row nowrap;
+  gap: 12px;
+  height: min-content;
+  overflow: hidden;
+  padding: 0px;
+  position: relative;
+  width: 100%;
 }
 
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
+.key-stroke {
+  outline: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  transform: none;
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.key-stroke p {
+  color: rgba(255, 255, 255, 0.75);
+  flex: 0 0 auto;
+  height: auto;
+  position: relative;
+  white-space: pre;
+  width: auto;
 }
 
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
+.or {
+  outline: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  transform: none;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
+.or p {
+  color: rgba(255, 255, 255, 0.25)
+}
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
+.generateButton {
+  place-content: flex-start;
+  align-items: flex-start;
+  background-color: rgb(255, 79, 18);
+  border-radius: 100px;
+  display: flex;
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 10px;
+  height: min-content;
+  overflow: hidden;
+  padding: 16px 24px;
+  position: relative;
+  text-decoration: none;
+  width: min-content;
+  will-change: transform;
+  cursor: pointer;
+}
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
+.generate {
+  outline: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  transform: none;
+}
 
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
+.generate p {
+  color: rgb(0, 0, 0);
+  margin: 0;
+}
 
-  .center {
-    padding: 8rem 0 6rem;
-  }
+.loading {
+  opacity: 0.7;
+  cursor: default;
+}
 
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
+.grow {
+  transition: all .2s ease-in-out;
+}
 
-  .description {
-    font-size: 0.8rem;
-  }
+.grow:hover {
+  transform: scale(1.1);
+}
 
-  .description a {
-    padding: 1rem;
-  }
+.output {
+  place-content: center flex-start;
+  align-items: center;
+  display: flex;
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 10px;
+  height: min-content;
+  max-width: 1200px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
 
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
+.outputHeaderContainer {
+  place-content: center;
+  align-items: center;
+  display: flex;
+  flex: 0 0 auto;
+  flex-flow: column nowrap;
+  gap: 16px;
+  height: min-content;
+  overflow: hidden;
+  padding: 0px;
+  position: relative;
+  width: 100%;
+}
+
+.outputHeader h3 {
+  font-family: "Manrope", serif;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 800;
+  letter-spacing: 0px;
+  line-height: 1.4em;
+  text-align: start;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  text-transform: none;
+  margin: 0;
+}
+
+.outputContent {
+  outline: none;
+  display: flex;
+  /* max-width: 25%; */
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  transform: none;
+}
+
+.outputContent p {
+  text-align: left;
+  white-space: pre-line;
+  color: rgb(0, 0, 0);
+}
+
+@media (min-width: 810px) and (max-width: 1199px) {
+  .container {
+    max-width: 600px;
     width: 100%;
   }
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
+  .promptContainer {
+    max-width: 600px;
+    width: 100%;
   }
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
+  .promptBox {
+    width: 100%;
   }
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
+@media (max-width: 809px) {
+  .container {
+    max-width: 500px;
+    width: 100%;
+  }
+
+  .promptContainer {
+    max-width: 500px;
+    width: 100%;
+  }
+
+  .promptBox {
+    width: 100%;
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
+@media (max-width: 600px) {
+  .container {
+    max-width: 400px;
+    width: 100%;
   }
 
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+  .headerTitle h1 {
+    font-size: 50px;
+  }
+
+  .headerSubtitle h2 {
+    text-align: center;
+  }
+
+  .key-stroke,
+  .or {
+    display: none;
+  }
+
+  .promptButtons {
+    justify-content: center;
+  }
+
+  .promptContainer {
+    max-width: 400px;
+    width: 100%;
+  }
+
+  .promptBox {
+    width: 100%;
   }
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
+
+
+/* Loading ring animation */
+.loader {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 2px solid #FFF;
+  border-right: 2px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
     transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
